# 3dModelMaker

./: CMakeLists.txt
src/: main.cpp  shader.fs  shaderNoGlare.fs  shaderScreen.vs
src/AlgGeometric/: AlgGeometric.h
src/Camera/: camera.h
src/Events/: EventsManager.cpp  EventsManager.h
src/Object/: Cube.cpp  Cube.h  LightSource.cpp  LightSource.h  ModelManager.cpp  ModelManager.h  TestClass.h
src/Renderer/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  ShaderProgram.cpp  ShaderProgram.h
src/Triangulation/: List.cpp  List.h  Triangulation.cpp  Triangulation.h  TriangulationArray.cpp  TriangulationArray.h  TriangulationMonotone.cpp  TriangulationMonotone.h
